--- a/MoviesApp/ClientApp/src/app/list-movies/movies-list.component.html
+++ b/MoviesApp/ClientApp/src/app/list-movies/movies-list.component.html
@@ -1,50 +1,15 @@
 <h1>All Movies</h1>
 
-<!--<p>This component demonstrates fetching data from the server.</p>
 
-<p *ngIf="!movies"><em>Loading...</em></p>
 
-<table class='table table-striped' *ngIf="movies">
-  <thead>
-    <tr>
-      <th>movieName</th>
-      <th>producerName</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let movie of movies">
-      <td>{{ movie.movieName }}</td>
-      <td>{{ movie.producerName }}</td>
-    </tr>
-  </tbody>
-</table>-->
-
-<div class="example-container mat-elevation-z8">
-  <div class="example-loading-shade"
-       *ngIf="isLoadingResults">
-    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+<div *ngFor="let movie of movies">
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src={{movie.moviePoster}} alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">{{movie.movieName}}</h5>
+      <p class="card-text">Produced By: {{movie.producerName}}</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
   </div>
-  <div class="button-row">
-    <a mat-flat-button color="primary" [routerLink]="['/product-add']"><mat-icon>add</mat-icon></a>
-  </div>
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="data" class="example-table"
-           matSort matSortActive="prod_name" matSortDisableClear matSortDirection="asc">
-
-      <!-- Product Name Column -->
-      <ng-container matColumnDef="prod_name">
-        <th mat-header-cell *matHeaderCellDef>Product Name</th>
-        <td mat-cell *matCellDef="let row">{{row.prod_name}}</td>
-      </ng-container>
-
-      <!-- Product Price Column -->
-      <ng-container matColumnDef="prod_price">
-        <th mat-header-cell *matHeaderCellDef>Product Price</th>
-        <td mat-cell *matCellDef="let row">$ {{row.prod_price}}</td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="['/product-details/', row.id]"></tr>
-    </table>
-  </div>
+  <br />
 </div>
